fix: 🛠️ adjust z-index for sparks

--- a/src/scss/sparks.scss
+++ b/src/scss/sparks.scss
@@ -6,4 +6,5 @@
 	// background-color: #212121;
 	backdrop-filter: invert(100%); // https://stackoverflow.com/a/77307800/21165921
 	transform: none;
+	z-index: 9999;
 }
